# purpur

./: .gitignore  Cargo.toml  crates.nix  deny.toml  flake.nix
app/: Cargo.toml
app/src/: main.rs  ui.rs
app/src/ui/: channel_list.rs  message_list.rs  mod.rs
libpurpur/: Cargo.toml
libpurpur/src/: lib.rs
libpurpur/src/protocols/: discord.rs  irc.rs  matrix.rs  mod.rs
libpurpur/src/structures/: channels.rs  image.rs  mod.rs  notification.rs  users.rs  widget.rs
libpurpurc/: Cargo.toml
libpurpurc/src/: lib.rs  libpurpurc.h
src/: main.rs
src/libpurpur/: mod.rs
src/libpurpur/protocols/: discord.rs  irc.rs  matrix.rs  mod.rs
src/libpurpur/structures/: channels.rs  image.rs  mod.rs  notification.rs
