[package]
name = "purpur"
version = "0.1.0"
edition = "2018"

[dependencies]
discord = { version = "0.9.0", git = "https://github.com/ThanePatrol/discord-rs.git" }
dotenv = "0.15.0"
enum_dispatch = "0.3.12"
futures = "0.3.28"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
irc = "0.15.0"
kanal = "0.1.0-pre8"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
