[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
libpurpur = { path = "../libpurpur" }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tokio = { version = "1.32.0", features = ["full"] }
